# subit

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.sh
docs/: design_doc.md  execution_plan.md
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  test_api.py  test_app.py
utils/: __init__.py  asr_model.py  audio_processor.py  audio_utils.py  model_utils.py  state_manager.py  task_manager.py
