[project]
name = "subit"
version = "0.1.0"
description = "Video speech transcription service using ASR"
requires-python = ">=3.9"

[tool.uv]
dev-dependencies = []

# Note: For uv pip install, use --index-url parameter:
# uv pip install -r requirements.txt --index-url https://pypi.tuna.tsinghua.edu.cn/simple
# Or set environment variable:
# export UV_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
